# pgsql_ext

./: .gitignore
pgsql_ext_core/: .gitignore  Cargo.toml  Makefile.toml
pgsql_ext_core/src/: lib.rs
pgsql_ext_core__clang/: Makefile  ex3.c  ex3.control
pgsql_ext_core__clang/data_files/: 91911e09-2685-40fb-ab3c-bdfa3e9f9aed.txt
pgsql_ext_core__clang/my_notes/: 1.txt  2.txt  3.txt
pgxr2/: Cargo.toml  README.md
pgxr2/src/: bindings.rs  elog.rs.excluded  lib.rs
pgxr_11/: Cargo.toml
pgxr_11/src/: bindings.rs  rust_utils.rs.excluded
pgxr_12/: Cargo.toml
pgxr_12/src/: bindings.rs
project1/: Cargo.toml  README.txt
project1/data/: log1.txt
project1/my_notes/: 1.txt  test.sql  test1.c
project1/my_notes/bindgings/: wrapper.h  wrapper.rs
src/: lib.rs
